--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <li><a href="pages/Artikel.html">Artikel</a></li>
         <li><a href="pages/text_formating.html">Text Formating</a></li>
         <li><a href="pages/presiden.html">List</a></li>
+        <li><a href="pages/Nota.html">Nota Pembelian</a></li>
+        <li><a href="pages/playlist.html">Playlist</a></li>
+        <li><a href="pages/form.html">Form Pendaftaran</a></li>
+        <li><a href="pages/Semantic.html">Semantic</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
