--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="pages/playlist.html">Playlist</a></li>
         <li><a href="pages/form.html">Form Pendaftaran</a></li>
         <li><a href="pages/Semantic.html">Semantic</a></li>
+        <li><a href="pages/Gallery.html">Gallery Card</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
