--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="pages/form.html">Form Pendaftaran</a></li>
         <li><a href="pages/Semantic.html">Semantic</a></li>
         <li><a href="pages/Gallery.html">Gallery Card</a></li>
+        <li><a href="pages/grid.html">Grid</a></li>
+        <li><a href="pages/flex.html">Flex</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
