--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="pages/Gallery.html">Gallery Card</a></li>
         <li><a href="pages/grid.html">Grid</a></li>
         <li><a href="pages/flex.html">Flex</a></li>
+        <li><a href="pages/jankenpon.html">Jankenpon</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
