--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li><a href="pages/flex.html">Flex</a></li>
         <li><a href="pages/fudamental.html">Fundamental</a></li>
         <li><a href="pages/jankenpon.html">Jankenpon</a></li>
+        <li><a href="pages/data_mahasiswa.html">Data Mahasiswa</a></li>
+        <li><a href="pages/ToDo.html">To Do List</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
