--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="pages/jankenpon.html">Jankenpon</a></li>
         <li><a href="pages/data_mahasiswa.html">Data Mahasiswa</a></li>
         <li><a href="pages/ToDo.html">To Do List</a></li>
+        <li><a href="pages/Web.html">WEB MEDIA</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
