--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="pages/data_mahasiswa.html">Data Mahasiswa</a></li>
         <li><a href="pages/ToDo.html">To Do List</a></li>
         <li><a href="pages/Web.html">WEB MEDIA</a></li>
+        <li><a href="pages/webbootstrap.html">Web Bootstrap</a></li>
     </ol>
     <br>
     <b>Social Media :</b>
